[project]
name = "superset-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-superset>=4.1.1",
    "duckdb-engine>=0.14.0",
    "duckdb>=1.1.3",
    "keyring>=25.6.0",
    "openpyxl>=3.1.5",
    "setuptools>=75.6.0",
]
